--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.45.1",
     "typescript": "^4.5.4",
