--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "@types/react-test-renderer": "^17.0.1",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.45.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
